--- a/style.css
+++ b/style.css
@@ -20,40 +20,39 @@ nav>ul
 }
 body
 {
-    font-family: sans-serif;
+    font-family: serif;
     line-height: 1,6;
-    color: darkslategrey;
-    border: 4px solid lightblue;
+    color: #333333;
+    border: 4px solid #6fa8dc;
     border-radius: 5px;
 }
 
-h1,h2 
+titre 
 {
-    font-family: serif;
-    color:#FF7F50;
+    font-family: Arial, Helvetica, sans-serif;
+    color:#004488;
     margin-bottom: 20px;
 }
 header
 {
     display: flex;
-    padding: 20px 20px;
+    padding: 40px 20px;
     align-items: center;
-    border-bottom: 4px solid lightblue;
-    background: linear-gradient(to right, #eea849, #f46b45); 
+    border-bottom: 4px solid;
+    border-image: linear-gradient(to right, #003366, #00C6FF) 1;
 }
 header img
 {
-    width: 200px;
-    height: 200px;
-    border: 5px solid lightblue;
-    border-radius: 30%;
+    width: auto;
+    height: 150px;
+    padding: 10px;
 }
 figure
 {
     margin: 20px 0px;
-    background-color: lightblue;
+    background-color: #6fa8dc;
     padding: 20px;
-    border: 1px solid red ;
+    border: 1px solid #6fa8dc ;
     border-radius: 5px;
 }
 figure img
@@ -66,26 +65,29 @@ figure figcaption
     margin-top: 10px;
     font-style: italic;
     font-weight: 600;
-    color: darkslategrey;
 }
 nav>ul>li>a
 {
     text-decoration: none;
-    color: darkslategrey;
+    color:#004488;
+    font-family: Arial, Helvetica, sans-serif;
     font-weight: 600;
+    text-transform: uppercase; /* Met tout en majuscules auto */
+    font-size: 0.9rem;         /* Souvent un poil plus petit que le texte */
+    letter-spacing: 1px;
     padding: 5px;
-    border-radius: 5px;
+    border-radius: 10px;
 }
 nav>ul>li>a:hover
 {
-    background-color: lightblue;
+    background-color: #6fa8dc;
     color: white;
 }
 footer
 {
     text-align: center;
     margin-top: 20px;
-    border-top: 4px solid lightblue;
+    border-top: 4px solid #6fa8dc;
     padding: 20px;
     background: linear-gradient(to right, #eea849, #f46b45); 
 }
