--- a/style.css
+++ b/style.css
@@ -18,12 +18,17 @@ nav>ul
     justify-content: left;
     gap: 20px;
 }
+table
+{
+    margin: 40px auto;
+}
 body
 {
     font-family: serif;
     line-height: 1,6;
     color: #333333;
     border: 4px solid #6fa8dc;
+    border-image: linear-gradient(to left, #003366, #00C6FF) 1;
     border-radius: 5px;
     background-color: #eef2f5;
 }
@@ -33,15 +38,20 @@ body
     font-family: Arial, Helvetica, sans-serif;
     color:#004488;
     margin-bottom: 20px;
+    margin: 20px 0 ;
 }
-.illustration
+figure
 {
     background: white;
     padding: 15px;
-    border-radius: 8px;
-    box-shadow: 0 4px 15px rgba(0,0,0,0.1); 
-    margin: 40px 0;
-    border: 1px solid #eee;
+    margin: 40px auto;
+    border: 3px solid transparent;
+    background: 
+        linear-gradient(white, white) padding-box, 
+        linear-gradient(to left, #003366, #00C6FF) border-box; 
+    border-radius: 10px;
+    text-align: center;
+    width: fit-content;
 }
 header
 {
@@ -49,7 +59,7 @@ header
     padding: 40px 20px;
     align-items: center;
     border-bottom: 4px solid;
-    border-image: linear-gradient(to right, #003366, #00C6FF) 1;
+    border-image: linear-gradient(to left, #003366, #00C6FF) 1;
 }
 header img
 {
@@ -57,13 +67,13 @@ header img
     height: 150px;
     padding: 10px;
 }
-.illustration img
+figure img
 {
     width: 100%;
     height: auto;
     border-radius: 4px;
 }
-.illustration figcaption
+figure figcaption
 {
     text-align: center;
     margin-top: 10px;
@@ -93,9 +103,34 @@ footer
     text-align: center;
     margin-top: 20px;
     border-top: 4px solid #6fa8dc;
+    border-image: linear-gradient(to left, #003366, #00C6FF) 1;
     padding: 20px; 
 }
 main p
 {
     display: block;
+}
+#shema img
+{
+    width: 400px;
+    height: auto;
+}
+header nav
+{
+    border-left: 4px solid #6fa8dc;
+    border-image: linear-gradient(to left, #003366, #00C6FF) 1;
+}
+#homme-intero
+{
+    height: 200px;
+    width: auto;
+}
+#logo-entreprise
+{
+    height: 200px;
+    width: auto;
+}
+#liste
+{
+    margin: 10px 30px;
 }
