--- a/style.css
+++ b/style.css
@@ -7,21 +7,42 @@
 main
 {
     max-width: 1500px;
-    margin: 0px,auto;
+    margin: 0px, auto;
     padding: 20px;
 }
+
+header img {
+    width: auto;
+    height: 150px;
+    padding: 10px;
+    background-color: white; 
+    border-radius: 30px; 
+    border: 1px solid #000000;
+}
+
+nav {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto; 
+    padding: 15px 40px;
+    padding-top: 30px;
+    border: 1px solid rgba(0, 0, 0, 1);
+    border-radius: 10px;
+    backdrop-filter: blur(5px);
+}
+
 nav>ul 
 {
-    padding: 20px 40px;
     display: flex;
     list-style: none;
     justify-content: left;
-    gap: 20px;
+    gap: 35px;
 }
 body
 {
     font-family: serif;
-    line-height: 1,6;
+    line-height: 1.6;
     color: #333333;
     border: 4px solid #6fa8dc;
     border-radius: 5px;
@@ -48,13 +69,17 @@ header
     display: flex;
     padding: 40px 20px;
     align-items: center;
+
     border-bottom: 4px solid;
     border-image: linear-gradient(to right, #003366, #00C6FF) 1;
+    background-image: url('img/backgroundHeader.png');
+    background-repeat: repeat;
+    background-size: 500px;
 }
 header img
 {
     width: auto;
-    height: 150px;
+    height: 200px;
     padding: 10px;
 }
 .illustration img
@@ -75,12 +100,14 @@ nav>ul>li>a
 {
     text-decoration: none;
     color:#004488;
+    background-color: rgba(49, 34, 248, 0.37);
+    border: 1px solid #000000;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 600;
     text-transform: uppercase; /* Met tout en majuscules auto */
     font-size: 0.9rem;         /* Souvent un poil plus petit que le texte */
     letter-spacing: 1px;
-    padding: 5px;
+    padding: 15px;
     border-radius: 10px;
 }
 nav>ul>li>a:hover
@@ -93,8 +120,36 @@ footer
     text-align: center;
     margin-top: 20px;
     border-top: 4px solid #6fa8dc;
-    padding: 20px; 
+    padding: 60px 20px;
+    background-image: url('img/backgroundHeader.png');
+    background-repeat: repeat;
+    background-size: 500px;
 }
+
+footer address
+{
+    font-style: normal;
+    display: inline-block;
+    width: auto;
+    padding: 10px;
+    backdrop-filter: blur(5px);
+    border-radius: 30px;
+    border: 1px solid #000000;
+}
+footer p
+{
+    
+    background-color: rgba(49, 34, 248, 0.37);
+    border: 1px solid #000000;
+    border-radius: 10px;
+    margin: 10px;
+    padding: 10px;
+}
+
+footer address p strong {
+    color: #004488;
+}
+
 main p
 {
     display: block;
